--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
     <string name="app_name">Coherence</string>
 
+    <string name="category" translatable="false">Category</string>
     <string name="category_title_travel">Travel</string>
     <string name="category_title_movie">Movies</string>
     <string name="category_title_groceries">Groceries</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
