initial implemention of list composition page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
     <string name="category_title_movie">Movies</string>
     <string name="category_title_groceries">Groceries</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="api_endpoint_movie" translatable="false">https://api.themoviedb.org/3/movie/</string>
 
 </resources>
