--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="category_title_groceries">Groceries</string>
 
     <string name="google_maps_api_key">AIzaSyCBjupD4UBQ4puue5J2uqjKpjpvpTJeB50</string>
+    <string name="fabric_api_key">58083912c035206135aea30a9df62233cd1f2cf5</string>
+
     <string name="api_endpoint_movie" translatable="false">https://api.themoviedb.org/3/movie/</string>
 </resources>
