--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="fabric_api_key">58083912c035206135aea30a9df62233cd1f2cf5</string>
 
     <string name="api_endpoint_movie" translatable="false">https://api.themoviedb.org/3/movie/</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
