Integrate with Recipe api (#35)
* initial implementation on lists of plans

* initial implementation of recipe api integration

* update README

* solbe conflict

* switch to mock data

* add mock plan

* update share activity

* update message

* fix mock data support

* fix basic flow

* fill ingredients to the list instead of the recipe itself

* update comment

* move string to resource file

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,13 @@
 <resources>
     <string name="app_name">Coherence</string>
 
-    <string name="category" translatable="false">Category</string>
-    <string name="category_title_travel">Travel</string>
-    <string name="category_title_movie">Movies</string>
-    <string name="category_title_groceries">Groceries</string>
-
     <string name="google_maps_api_key">AIzaSyCBjupD4UBQ4puue5J2uqjKpjpvpTJeB50</string>
     <string name="fabric_api_key">58083912c035206135aea30a9df62233cd1f2cf5</string>
 
-    <string name="api_endpoint_movie" translatable="false">https://api.themoviedb.org/3/movie/</string>
+    <string name="api_endpoint_recipe" translatable="false">https://api.edamam.com/</string>
+    <string name="idea_hint_recipe">search for a recipe</string>
+    <string name="idea_share_cue">Honey on your way home would you get these for me, please?
+</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
