--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="fabric_api_key">58083912c035206135aea30a9df62233cd1f2cf5</string>
 
     <string name="api_endpoint_recipe" translatable="false">https://api.edamam.com/</string>
+    <string name="api_endpoint_recipe_v2" translatable="false">https://spoonacular-recipe-food-nutrition-v1.p.mashape.com/</string>
     <string name="idea_hint_recipe">search for a recipe</string>
     <string name="idea_share_cue">Honey on your way home would you get these for me, please?
 </string>
