--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="add_friend">Add Friend</string>
     <string name="share_list">Share List</string>
     <string name="save_list">Save List</string>
+    <string name="search_goal">Search Recipe</string>
     <string name="default_idea_prefix">Groceries List</string>
 </resources>
