--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="save_list">Save List</string>
     <string name="search_goal">Search Recipe</string>
     <string name="default_idea_prefix">Groceries List</string>
+    <string name="initials">Initials of user</string>
+    <string name="cannot_remove_self">Cannot remove yourself.</string>
 </resources>
