Fixed following bugs 1. Adding empty item to list 2. Prompt user if user wants to save empty list, else delete empty list. 3. Make recipe TextView scrollable.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,8 @@
     <string name="remove">Remove</string>
     <string name="notification_title">A new list shared.</string>
     <string name="notification_text">Curious what to get ? - click here !</string>
+    <string name="save_empty_list">Do you want to save an empty list ?</string>
+    <string name="empty_list">Empty List</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
