Add fab for map fragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="remove_recipe">Remove Recipe</string>
     <string name="create_list">Create Grocery List</string>
     <string name="search_goal">Search Recipe</string>
+    <string name="nearby_stores">Nearby Stores</string>
     <string name="default_idea_prefix">Groceries List</string>
     <string name="initials">Initials of user</string>
     <string name="cannot_remove_self">Cannot remove yourself.</string>
