--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,9 @@
     <string name="create_grocery_list">Create List</string>
     <string name="saved_ideas">Grocery List</string>
     <string name="create_grocery_hint">Start searching for groceries here</string>
-    <string name="create_grocery_snackbar_hint">Looks like your grocery list is empty, start adding groceries to the list by tapping on the search icon above.</string>
+    <string name="create_grocery_snackbar_hint">Looks like your grocery list is empty, start adding groceries to the list by tapping on the
+        search icon above.
+    </string>
     <string name="saved_grocery_hint">Saved Grocery List</string>
 
     <string name="google_maps_api_key">AIzaSyCBjupD4UBQ4puue5J2uqjKpjpvpTJeB50</string>
