--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,7 @@
     <string name="google_maps_api_key">AIzaSyCBjupD4UBQ4puue5J2uqjKpjpvpTJeB50</string>
     <string name="fabric_api_key">58083912c035206135aea30a9df62233cd1f2cf5</string>
 
-    <string name="api_endpoint_recipe" translatable="false">https://api.edamam.com/</string>
-    <string name="api_endpoint_recipe_v2" translatable="false">
+    <string name="api_endpoint_recipe" translatable="false">
         https://spoonacular-recipe-food-nutrition-v1.p.mashape.com/
     </string>
     <string name="idea_search_hint">Search ingredient ...</string>
